# VJDownloader

./: .gitignore  AGENT.md  Cargo.toml  spec.md
.github/workflows/: build-macos.yml
assets/icon/: App.icns
docs/: search.md  spec.md
src/: app.rs  app_logger.rs  bundled.rs  cursor.rs  download.rs  fs_utils.rs  log_ui.rs  mac_file_dialog.rs  mac_input_source.rs  mac_menu.rs  mac_window.rs  main.rs  paths.rs  search_index.rs  settings.rs  settings_ui.rs  theme.rs  ui.rs
src/download/: animethemes.rs  process.rs  staging.rs  tools.rs
src/search_index/: db.rs  normalize.rs  query.rs  scanner.rs  watcher.rs  writer.rs
