[package]
name = "VJDownloader"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
eframe = "0.33.3"
arboard = "3.6.1"
url = "2.5.8"
drag = "2.1.0"

[profile.dev]
debug-assertions = false

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", default-features = false, features = ["NSArray", "NSString", "NSObject", "NSThread", "NSURL"] }
objc2-app-kit = { version = "0.2.2", default-features = false, features = ["NSApplication", "NSMenu", "NSMenuItem", "NSEvent", "NSOpenPanel", "NSPanel", "NSSavePanel", "NSWindow", "NSResponder"] }
