[package]
name = "VJDownloader"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
eframe = "0.33.3"
arboard = "3.6.1"
url = "2.5.8"
drag = "2.1.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
walkdir = "2.5.0"
notify = "8.2.0"
unicode-normalization = "0.1.24"
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["formatting", "local-offset", "macros"] }

[dev-dependencies]
tempfile = "3.25.0"

[patch.crates-io]
drag = { path = "vendor/drag" }

[profile.dev]
debug-assertions = false

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSString", "NSObject", "NSThread", "NSURL"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication", "NSMenu", "NSMenuItem", "NSEvent", "NSOpenPanel", "NSPanel", "NSSavePanel", "NSWindow", "NSResponder", "NSImage"] }
